[gd_scene load_steps=11 format=2]

[ext_resource path="res://Fonts/Bold.tres" type="DynamicFont" id=1]
[ext_resource path="res://Scenes/CombatProf.gd" type="Script" id=2]
[ext_resource path="res://Scenes/Combat1.gd" type="Script" id=3]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="StyleBoxEmpty" id=7]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -590.0
margin_top = -310.0
margin_right = 590.0
margin_bottom = 310.0
rect_min_size = Vector2( 1180, 620 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 1180.0
margin_bottom = 20.0
rect_min_size = Vector2( 0, 20 )
script = ExtResource( 2 )

[node name="CombatProf" type="RichTextLabel" parent="VBoxContainer/HBoxContainer"]
margin_right = 225.0
margin_bottom = 20.0
rect_min_size = Vector2( 225, 0 )
custom_fonts/normal_font = ExtResource( 1 )
bbcode_enabled = true
bbcode_text = "    Combat Proficiency"
text = "    Combat Proficiency"
scroll_active = false

[node name="Progress" type="LineEdit" parent="VBoxContainer/HBoxContainer/CombatProf"]
margin_right = 120.0
margin_bottom = 20.0
size_flags_horizontal = 0
custom_styles/focus = SubResource( 1 )
custom_styles/normal = SubResource( 2 )
custom_fonts/font = ExtResource( 1 )
placeholder_text = "[0]"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Level" type="LineEdit" parent="VBoxContainer/HBoxContainer"]
margin_left = 229.0
margin_right = 349.0
margin_bottom = 20.0
custom_styles/focus = SubResource( 1 )
custom_styles/normal = SubResource( 2 )
custom_fonts/font = ExtResource( 1 )
placeholder_text = "[0]"

[node name="Blank" type="RichTextLabel" parent="VBoxContainer"]
margin_top = 24.0
margin_right = 1180.0
margin_bottom = 44.0
rect_min_size = Vector2( 0, 20 )
custom_fonts/normal_font = ExtResource( 1 )
bbcode_enabled = true

[node name="Combat Skills" type="RichTextLabel" parent="VBoxContainer"]
margin_top = 48.0
margin_right = 1180.0
margin_bottom = 68.0
rect_min_size = Vector2( 0, 20 )
custom_fonts/normal_font = ExtResource( 1 )
bbcode_enabled = true
bbcode_text = "[u]Combat Skills[/u]"
text = "Combat Skills"

[node name="reference" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 72.0
margin_right = 1180.0
margin_bottom = 91.0

[node name="Progress" type="LineEdit" parent="VBoxContainer/reference"]
margin_right = 120.0
margin_bottom = 19.0
custom_styles/read_only = SubResource( 5 )
custom_styles/focus = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
custom_fonts/font = ExtResource( 1 )
align = 1
editable = false
placeholder_text = "Progress"

[node name="Skill" type="LineEdit" parent="VBoxContainer/reference"]
margin_left = 124.0
margin_right = 524.0
margin_bottom = 19.0
rect_min_size = Vector2( 400, 0 )
custom_styles/read_only = SubResource( 6 )
custom_styles/focus = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
custom_fonts/font = ExtResource( 1 )
editable = false
placeholder_text = "Skill"

[node name="SkillLevel" type="LineEdit" parent="VBoxContainer/reference"]
margin_left = 528.0
margin_right = 648.0
margin_bottom = 19.0
custom_styles/read_only = SubResource( 7 )
custom_styles/focus = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
custom_fonts/font = ExtResource( 1 )
editable = false
placeholder_text = "Level"

[node name="Combat 1" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 95.0
margin_right = 1180.0
margin_bottom = 114.0
script = ExtResource( 3 )

[node name="Progress" type="LineEdit" parent="VBoxContainer/Combat 1"]
margin_right = 120.0
margin_bottom = 19.0
custom_styles/focus = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
custom_fonts/font = ExtResource( 1 )
align = 1

[node name="Skill" type="LineEdit" parent="VBoxContainer/Combat 1"]
margin_left = 124.0
margin_right = 524.0
margin_bottom = 19.0
rect_min_size = Vector2( 400, 0 )
custom_styles/focus = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
custom_fonts/font = ExtResource( 1 )

[node name="SkillLevel" type="LineEdit" parent="VBoxContainer/Combat 1"]
margin_left = 528.0
margin_right = 648.0
margin_bottom = 19.0
custom_styles/focus = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
custom_fonts/font = ExtResource( 1 )

[node name="Combat 2" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 118.0
margin_right = 1180.0
margin_bottom = 137.0

[node name="Progress" type="LineEdit" parent="VBoxContainer/Combat 2"]
margin_right = 120.0
margin_bottom = 19.0
custom_styles/focus = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
custom_fonts/font = ExtResource( 1 )
align = 1

[node name="Skill" type="LineEdit" parent="VBoxContainer/Combat 2"]
margin_left = 124.0
margin_right = 524.0
margin_bottom = 19.0
rect_min_size = Vector2( 400, 0 )
custom_styles/focus = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
custom_fonts/font = ExtResource( 1 )

[node name="SkillLevel" type="LineEdit" parent="VBoxContainer/Combat 2"]
margin_left = 528.0
margin_right = 648.0
margin_bottom = 19.0
custom_styles/focus = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
custom_fonts/font = ExtResource( 1 )

[node name="Combat 3" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 141.0
margin_right = 1180.0
margin_bottom = 160.0

[node name="Progress" type="LineEdit" parent="VBoxContainer/Combat 3"]
margin_right = 120.0
margin_bottom = 19.0
custom_styles/focus = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
custom_fonts/font = ExtResource( 1 )
align = 1

[node name="Skill" type="LineEdit" parent="VBoxContainer/Combat 3"]
margin_left = 124.0
margin_right = 524.0
margin_bottom = 19.0
rect_min_size = Vector2( 400, 0 )
custom_styles/focus = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
custom_fonts/font = ExtResource( 1 )

[node name="SkillLevel" type="LineEdit" parent="VBoxContainer/Combat 3"]
margin_left = 528.0
margin_right = 648.0
margin_bottom = 19.0
custom_styles/focus = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
custom_fonts/font = ExtResource( 1 )

[node name="Combat 4" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 164.0
margin_right = 1180.0
margin_bottom = 183.0

[node name="Progress" type="LineEdit" parent="VBoxContainer/Combat 4"]
margin_right = 120.0
margin_bottom = 19.0
custom_styles/focus = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
custom_fonts/font = ExtResource( 1 )
align = 1

[node name="Skill" type="LineEdit" parent="VBoxContainer/Combat 4"]
margin_left = 124.0
margin_right = 524.0
margin_bottom = 19.0
rect_min_size = Vector2( 400, 0 )
custom_styles/focus = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
custom_fonts/font = ExtResource( 1 )

[node name="SkillLevel" type="LineEdit" parent="VBoxContainer/Combat 4"]
margin_left = 528.0
margin_right = 648.0
margin_bottom = 19.0
custom_styles/focus = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
custom_fonts/font = ExtResource( 1 )

[node name="Combat 5" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 187.0
margin_right = 1180.0
margin_bottom = 206.0

[node name="Progress" type="LineEdit" parent="VBoxContainer/Combat 5"]
margin_right = 120.0
margin_bottom = 19.0
custom_styles/focus = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
custom_fonts/font = ExtResource( 1 )
align = 1

[node name="Skill" type="LineEdit" parent="VBoxContainer/Combat 5"]
margin_left = 124.0
margin_right = 524.0
margin_bottom = 19.0
rect_min_size = Vector2( 400, 0 )
custom_styles/focus = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
custom_fonts/font = ExtResource( 1 )

[node name="SkillLevel" type="LineEdit" parent="VBoxContainer/Combat 5"]
margin_left = 528.0
margin_right = 648.0
margin_bottom = 19.0
custom_styles/focus = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
custom_fonts/font = ExtResource( 1 )

[node name="Combat 6" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 210.0
margin_right = 1180.0
margin_bottom = 229.0

[node name="Progress" type="LineEdit" parent="VBoxContainer/Combat 6"]
margin_right = 120.0
margin_bottom = 19.0
custom_styles/focus = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
custom_fonts/font = ExtResource( 1 )
align = 1

[node name="Skill" type="LineEdit" parent="VBoxContainer/Combat 6"]
margin_left = 124.0
margin_right = 524.0
margin_bottom = 19.0
rect_min_size = Vector2( 400, 0 )
custom_styles/focus = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
custom_fonts/font = ExtResource( 1 )

[node name="SkillLevel" type="LineEdit" parent="VBoxContainer/Combat 6"]
margin_left = 528.0
margin_right = 648.0
margin_bottom = 19.0
custom_styles/focus = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
custom_fonts/font = ExtResource( 1 )

[node name="Combat 7" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 233.0
margin_right = 1180.0
margin_bottom = 252.0

[node name="Progress" type="LineEdit" parent="VBoxContainer/Combat 7"]
margin_right = 120.0
margin_bottom = 19.0
custom_styles/focus = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
custom_fonts/font = ExtResource( 1 )
align = 1

[node name="Skill" type="LineEdit" parent="VBoxContainer/Combat 7"]
margin_left = 124.0
margin_right = 524.0
margin_bottom = 19.0
rect_min_size = Vector2( 400, 0 )
custom_styles/focus = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
custom_fonts/font = ExtResource( 1 )

[node name="SkillLevel" type="LineEdit" parent="VBoxContainer/Combat 7"]
margin_left = 528.0
margin_right = 648.0
margin_bottom = 19.0
custom_styles/focus = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
custom_fonts/font = ExtResource( 1 )

[node name="Combat 8" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 256.0
margin_right = 1180.0
margin_bottom = 275.0

[node name="Progress" type="LineEdit" parent="VBoxContainer/Combat 8"]
margin_right = 120.0
margin_bottom = 19.0
custom_styles/focus = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
custom_fonts/font = ExtResource( 1 )
align = 1

[node name="Skill" type="LineEdit" parent="VBoxContainer/Combat 8"]
margin_left = 124.0
margin_right = 524.0
margin_bottom = 19.0
rect_min_size = Vector2( 400, 0 )
custom_styles/focus = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
custom_fonts/font = ExtResource( 1 )

[node name="SkillLevel" type="LineEdit" parent="VBoxContainer/Combat 8"]
margin_left = 528.0
margin_right = 648.0
margin_bottom = 19.0
custom_styles/focus = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
custom_fonts/font = ExtResource( 1 )
[connection signal="text_changed" from="VBoxContainer/HBoxContainer/CombatProf/Progress" to="VBoxContainer/HBoxContainer" method="_on_Progress_text_changed"]
[connection signal="text_changed" from="VBoxContainer/HBoxContainer/Level" to="VBoxContainer/HBoxContainer" method="_on_CP_Level_text_changed"]
[connection signal="text_changed" from="VBoxContainer/Combat 1/Progress" to="VBoxContainer/Combat 1" method="_on_Progress_text_changed"]
[connection signal="text_changed" from="VBoxContainer/Combat 1/Skill" to="VBoxContainer/Combat 1" method="_on_Skill_text_changed"]
[connection signal="text_changed" from="VBoxContainer/Combat 1/SkillLevel" to="VBoxContainer/Combat 1" method="_on_SkillLevel_text_changed"]
